--- a/prisma/prisma-cloud/blocks/intro/intro.css
+++ b/prisma/prisma-cloud/blocks/intro/intro.css
@@ -56,6 +56,7 @@
 
 .operationalize .intro-container {
   display: none;
+  overflow-x: hidden;
   transition: opacity 0.6s ease;
 }
 
@@ -416,6 +417,11 @@
 
   .intro-container .ops-icon-button {
     left: -1px;
+  }
+
+  .intro-container:after {
+    background: radial-gradient(50% 50% at 100% 100%, #4392B4 0%, rgba(34, 47, 168, 0.00) 100%);
+    transform: none;
   }
 }
 
